--- a/OurStore/OurStore.csproj
+++ b/OurStore/OurStore.csproj
@@ -17,6 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Moq.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="NLog.MailKit" Version="5.3.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.15" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
